[package]
name = "sbpf-dump"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sbpf-dump"
path = "src/main.rs"

[dependencies]
goblin = "0.8"
clap = { version = "4", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
solana-client = "2.2"
solana-sdk = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
